# sparrow

./: .gitignore  pyproject.toml
sparrow-data/parse/sparrow_parse/vllm/: mlx_inference.py
sparrow-ml/llm/: engine.py  test_mlv_vlm.py
sparrow-ui/shell/: config.properties
